Fix layout.
Was previously embedding a span4 inside a span2, which doesn't work. But span2
is too narrow, so switch to span3.

Also add some padding to banners and newsfeed.

Spotted by Matt Fowles.

--- a/jigsaw.css
+++ b/jigsaw.css
@@ -20,11 +20,13 @@ body {
 .banners {
   background-color: #d9edf7;
   color: #3187ad;
+  padding: 3px;
 }
 
 .newsfeed {
   background-color: #fcf8e3;
   color: #c09853;
+  padding: 3px;
 }
 
 /* font family from bootstrap's code/pre */
